<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/ll_input_data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="12dp">

        <LinearLayout
            android:id="@+id/choose_country"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:text="@string/choose_country"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@android:color/black" />

            <Spinner
                android:id="@+id/country_listSpinner"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/choose_language"
            android:layout_width="match_parent"
            android:layout_marginTop="8dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:text="@string/language"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@android:color/black" />

            <Spinner
                android:id="@+id/lang_list_pinner"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/et_supportedArea"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="@string/supported_areas_hint"
                android:hint="@string/supported_areas_hint"
                android:inputType="text" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/supported_areas"
                android:textAppearance="@style/TextAppearance.AppCompat.Small" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_result_data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        android:layout_below="@+id/ll_input_data"
        android:orientation="vertical">

        <View
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:background="@android:color/darker_gray" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/selected_address"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@android:color/black" />

        <TextView
            android:id="@+id/tv_location_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/simple_rect_black_border"
            android:elevation="2dp"
            android:minLines="2"
            android:padding="5dp"
            tools:text="Cairo,Egypt"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="10dp">

            <TextView
                android:layout_width="0dp"
                android:layout_weight=".6"
                android:layout_height="wrap_content"
                android:text="@string/latitude"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/tv_latitude"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:background="@drawable/simple_rect_black_border"
                android:elevation="2dp"
                android:maxLines="1"
                android:padding="5dp"
                tools:text="3214.26485"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingStart="10dp"
            android:paddingEnd="10dp">

            <TextView
                android:layout_width="0dp"
                android:layout_weight=".6"
                android:layout_height="wrap_content"
                android:text="@string/longitude"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/tv_longitude"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:background="@drawable/simple_rect_black_border"
                android:elevation="2dp"
                android:maxLines="1"
                android:padding="5dp"
                tools:text="6546.54"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        </LinearLayout>


    </LinearLayout>

    <Button
        android:id="@+id/select_location_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="20dp"
        android:background="@drawable/small_button_shape"
        android:text="@string/select_location_on_map"
        android:textColor="@color/white" />

</RelativeLayout>